# ProteinMPNN

./: .dockerignore  .gitignore  Dockerfile  cli.py  proteinmpnn.py  pyproject.toml  utils.py
.data/outputs/example_3_score_only_outputs/seqs/: 3HTN.fa
.devcontainer/: devcontainer.json
colab_notebooks/: ca_only_quickdemo.ipynb  quickdemo.ipynb  quickdemo_wAF2.ipynb
data/outputs/example_3_score_only_outputs/seqs/: 3HTN.fa
data/outputs/example_pssm_outputs/: make_PSSM_files.ipynb
helper_scripts/: assign_fixed_chains.py  make_bias_AA.py  make_bias_per_res_dict.py  make_fixed_positions_dict.py  make_pos_neg_tied_positions_dict.py  make_pssm_input_dict.py  make_tied_positions_dict.py  parse_multiple_chains.py
helper_scripts/other_tools/: make_omit_AA.py  make_pssm_dict.py
src/proteinmpnn/: __main__.py  cli.py  utils.py
training/: colab_training_example.ipynb  model_utils.py  parse_cif_noX.py  plot_training_results.ipynb  training.py  utils.py
